# GamerX_Store

./: .gitignore  README.md  meson.build  upload_to_github.sh
data/: io.github.gamerx.GamerXStore.desktop.in  io.github.gamerx.GamerXStore.gschema.xml  io.github.gamerx.GamerXStore.metainfo.xml.in  io.github.gamerx.GamerXStore.search-provider.ini.in  io.github.gamerx.GamerXStore.service.in  meson.build
data/dbus/: io.github.gamerx.GamerXStore.service.in  meson.build
data/icons/: meson.build
gamerx-store-ui/: Cargo.toml  meson.build
gamerx-store-ui/include/: gamerx-store-ui.h
src/: dl-worker.c  gamerx-store.gresource.xml  gx-addons-dialog.blp  gx-addons-dialog.c  gx-addons-dialog.h  gx-app-tile.blp  gx-app-tile.c  gx-app-tile.h  gx-application-map-factory.c  gx-application-map-factory.h  gx-application.c  gx-application.h  gx-async-texture.c  gx-async-texture.h  gx-backend-notification.c  gx-backend-notification.h  gx-backend-transaction-op-payload.c  gx-backend-transaction-op-payload.h  gx-backend-transaction-op-progress-payload.c  gx-backend-transaction-op-progress-payload.h  gx-backend.c  gx-backend.h  gx-browse-widget.blp  gx-browse-widget.c  gx-browse-widget.h  gx-category-page.blp  gx-category-page.c  gx-category-page.h  gx-category-tile.blp  gx-category-tile.c  gx-category-tile.h  gx-comet-overlay.c  gx-comet-overlay.h  gx-comet.c  gx-comet.h  gx-content-provider-config-schema.xml  gx-content-provider.c  gx-content-provider.h  gx-content-section.c  gx-content-section.h  (+126 more)
